<resources>
    <string name="app_name">lb3</string>
    <string name="title_choose">Оберіть книгу та рік</string>
    <string name="label_authors">Автори / Книги:</string>
    <string name="label_year">Рік видання:</string>
    <string name="year_2020">2020</string>
    <string name="year_2021">2021</string>
    <string name="year_2022">2022</string>
    <string name="btn_ok">ОК</string>
    <string name="cancel_button">Скасувати</string>
    <string name="default_result">Результат буде тут</string>

    <string name="warning_title">Неповні дані</string>
    <string name="warning_message">Будь ласка, оберіть рік видання.</string>
    <string name="result_format">Обрано:\nКнига: %1$s\nРік: %2$s</string>
    <string name="book_title">Book Title</string>
    <string name="author_name_year">Author Name, Year</string>
    <string name="desc_delete">Видалити книгу</string>
    <string name="author_year_format">%1$s, %2$d</string>


    <string name="filter_label">Filter by status:</string>
    <string name="filter_all">All</string>
    <string name="filter_read">Read</string>
    <string name="filter_unread">Unread</string>
    <string name="btn_add_manual">Add New Book</string>
    <string name="app_name_display">Personal Library (Lab3 var14)</string>
    <string name="label_read">Read</string>


    <string name="dialog_add_title">Add New Book</string>
    <string name="hint_book_title">Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_year">Publication Year</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error_empty_fields">Please fill all fields</string>


    <string name="stats_header">Library Insights</string>
    <string name="label_total_books">Total Collection</string>
    <string name="stats_value_format">%1$d</string>
    <string name="_0">0</string>
    <string name="tab_library">Library</string>
    <string name="tab_stats">Statistics</string>
    <string name="tab_layout_description">Navigation tabs for library and statistics</string>
</resources>